--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
-    "jasmine": "^2.5.2"
+    "jasmine": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0"
   },
   "scripts": {
+    "watch": "node_modules/babel-cli/bin/babel.js src/js/ --watch --out-dir C:/Users/dylan.foster/Documents/esgi/4ADW/S1/TestsUnitaires/101/build/ --source-root C:/Users/dylan.foster/Documents/esgi/4ADW/S1/TestsUnitaires/101/"
   },
   "paths": {
     "es6": "node_modules/requirejs-babel/es6",
